tests/errors/source/short_superfluous_substitution.rs
use duplicate::*;
#[duplicate_item(
	ident1;
	[sub1] [sub2];
)]//duplicate_end
pub struct name(ty);
//item_end
